--- a/firstGame/static/firstGame/css/style.css
+++ b/firstGame/static/firstGame/css/style.css
@@ -1,5 +1,80 @@
-.game-container {
-	background-color: #f0f0f0;
-	height: 480px;
-	width: 960px;
+header, footer{
+	align-items: center;
+	display: flex;
+	justify-content: center;
+	padding: 40px 20px;	
+}
+
+main {
+	flex: 1;
+	display: flex;
+}
+
+#gameCanvas {
+	border: 1px solid red;
+	display: flex;
+	left: 50%;
+	position: absolute;
+	top: 50%;
+	transform: translate(-50%, -50%);
+	z-index: 1;
+}
+
+#gameContainer {
+	border: 4px solid yellow;
+	display: flex;
+}
+
+#scoreBoard {
+	border: 2px solid yellow;
+	color: blue;
+	display: flex;
+	height: 20px;
+	margin-bottom: 40px;
+	position: absolute;
+	right: 20%;
+	top: 20%;
+	width: 40px;
+	z-index: 10;
+}
+
+#score {
+	color: red;
+	font: 12px;
+	z-index: 10;
+}
+
+#timeBoard {
+	border: 2px solid yellow;
+	color: blue;
+	display: flex;
+	height: 20px;
+	margin-top: 40px;
+	position: absolute;
+	right: 20%;
+	top: 20%;
+	width: 40px;
+	z-index: 10;
+}
+
+#timeRemaining {
+	color: green;
+	font: 12px;
+	z-index: 10;
+}
+
+#startButton {
+	color: blue;
+	display: flex;
+	position: absolute;
+}
+
+#finalScore {
+	border: 2px solid #000;
+    color: blue;
+    font-size: 14px;
+    font-weight: bold;
+    width: 200px;
+    margin: auto;
+    text-align: center;
 }
